yaml/manufacturer/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: manufacturer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: manufacturer
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: manufacturer
    spec:
      containers:
      - name: manufacturer
        image: atgracey/fido-sample:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http
        volumeMounts:
        - mountPath: /app/hibernate.cfg.xml
          name: config
          subPath: hibernate.cfg.xml
        - mountPath: /app/service.yml
          name: config
          subPath: service.yml
        - mountPath: /app/WEB-INF/web.xml
          name: config
          subPath: web.xml
      volumes:
      - name: config
        configMap:
          name: manufacturer-config
          items:
          - key: hibernate.cfg.xml
            path: hibernate.cfg.xml
          - key: service.yml
            path: service.yml
          - key: web.xml
            path: web.xml
