yaml/manufacturer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: manufacturer
spec:
  type: LoadBalancer
  ports:
  - name: http
    port: 8081
    protocol: TCP
    targetPort: 8080
  selector:
    app: manufacturer
