yaml/manufacturer/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: manufacturer
spec:
  tls:
  - hosts:
    - manufacturer.fido.gracey.dev
    secretName: manufacturer-tls
  rules:
  - host: manufacturer.fido.gracey.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: manufacturer
            port:
              number: 8080
